cmd/kubernetes/operator/kodata/webhook/webhook.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-operator-proxy-webhook
  namespace: tekton-pipelines
  labels:
    version: v0.73.0
    operator.tekton.dev/release: v0.73.0
spec:
  replicas: 1
  selector:
    matchLabels:
      name: tekton-operator
  template:
    metadata:
      labels:
        name: tekton-operator
        app: tekton-operator
    spec:
      serviceAccountName: tekton-operators-proxy-webhook
      containers:
        - name: proxy
          image: "ko://github.com/tektoncd/operator/cmd/kubernetes/proxy-webhook"
          ports:
            - name: https-webhook
              containerPort: 8443
          securityContext:
            runAsUser: 65532
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 500Mi

---

apiVersion: v1
kind: Service
metadata:
  name: tekton-operator-proxy-webhook
  namespace: tekton-pipelines
  labels:
    version: v0.73.0
    operator.tekton.dev/release: v0.73.0
spec:
  ports:
    - name: https-webhook
      port: 443
      targetPort: 8443
  selector:
    name: tekton-operator

---

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: proxy.operator.tekton.dev
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: tekton-operator-proxy-webhook
        namespace: tekton-pipelines
    failurePolicy: Fail
    sideEffects: None
    name: proxy.operator.tekton.dev
